--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
     uses: koei-kaji/reusable-github-actions/.github/workflows/python-code-check.yaml@v1.0.0
     with:
       python-version: 3.10.5
-      pip-version: 22.2.2
+      poetry-version: 1.1.13
       command-check-format: "make format-check"
       command-lint: "make lint"
       command-test: "make test"
