--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ gunicorn = "^20.1.0"
 fastapi = "^0.78.0"
 pydantic = "^1.9.1"
 injector = "^0.20.1"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
