--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,16 +5,21 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - "**"
-      - "!**.md"
+    paths-ignore:
+      - "**.md"
 
 jobs:
   code-check:
-    uses: koei-kaji/reusable-github-actions/.github/workflows/python-code-check.yaml@v1.0.1
+    uses: koei-kaji/reusable-github-actions/.github/workflows/python-code-check.yaml@v1.1.2
     with:
       python-version: 3.10.5
       poetry-version: 1.1.13
       command-check-format: "make format-check"
       command-lint: "make lint"
       command-test: "make test"
+
+  docker-check-rest:
+    needs: code-check
+    uses: koei-kaji/reusable-github-actions/.github/workflows/docker-check.yaml@v1.1.2
+    with:
+      dockerfile-name: Dockerfile.rest
