--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = ""
 authors = ["koei-kaji <koei.kaji@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.11"
 uvicorn = {extras = ["standard"], version = "^0.17.6"}
 gunicorn = "^20.1.0"
 fastapi = "^0.78.0"
 pydantic = "^1.9.1"
 injector = "^0.20.1"
 requests = "^2.28.1"
+grpcio-tools = "^1.48.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
@@ -21,6 +22,8 @@ black = "*"
 pytest-cov = "*"
 pylint = "*"
 coverage-badge = "*"
+mypy-protobuf = "^3.2.0"
+protoletariat = "^0.9.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
