--- a/Dockerfile.rest
+++ b/Dockerfile.rest
@@ -17,17 +17,20 @@ ARG POETRY_VERSION
 ENV USERNAME=python
 WORKDIR /usr/src/app/
 COPY --from=builder /usr/src/app/requirements.txt ./
+COPY security_updates.list .
+
+# security update
+SHELL [ "/bin/bash", "-o", "pipefail", "-c" ]
+# hadolint ignore=DL3008,SC2068
+RUN readarray -t args < <(grep -vE '^\s*#' security_updates.list) \ 
+    && apt-get update && apt-get install --no-install-recommends -y ${args[@]} \
+    && rm -rf \
+    /var/lib/apt/lists/*
 
 RUN apt-get update \
     # NOTE: uncomment below if you execute apt-get to install something
-    && apt-get install --no-install-recommends -y \
+    # && apt-get install --no-install-recommends -y \
     # NOTE: https://packages.debian.org/search
-    gpgv=2.2.27-2+deb11u2 \
-    libgnutls30=3.7.1-5+deb11u2 \
-    libssl1.1=1.1.1n-0+deb11u3 \
-    libtirpc-common=1.3.1-1+deb11u1 \
-    libtirpc3=1.3.1-1+deb11u1 \
-    openssl=1.1.1n-0+deb11u3 \
     && pip install --no-cache-dir --upgrade pip==${PIP_VERSION} \
     && pip install --no-cache-dir -r requirements.txt \
     && rm -rf \
