--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,23 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "timezone": "Asia/Tokyo",
+  "packageRules": [
+    {
+      "matchPackageNames": ["pyenv"],
+      "groupName": "pyenv"
+    },
+    {
+      "matchPackageNames": ["poetry"],
+      "groupName": "poetry"
+    },
+    {
+      "matchPackageNames": ["dockerfile"],
+      "groupName": "dockerfile"
+    },
+    {
+      "matchPackageNames": ["github-actions"],
+      "groupName": "github actions"
+    }
   ]
 }
