--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ pydantic = "^1.9.1"
 injector = "^0.20.1"
 requests = "^2.28.1"
 grpcio-tools = "^1.48.1"
+protobuf = "4.21.6"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "*"
 mypy = "*"
 isort = "*"
@@ -23,7 +24,7 @@ pytest-cov = "*"
 pylint = "*"
 coverage-badge = "*"
 mypy-protobuf = "^3.2.0"
-protoletariat = "^0.9.4"
+protoletariat = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -49,6 +50,7 @@ extension-pkg-whitelist = "pydantic"
 # https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
 [tool.pylint.format]
 max-line-length = 88
+ignored-modules= ["_grpc"]
 
 # https://docs.pytest.org/en/stable/customize.html#pyproject-toml
 [tool.pytest.ini_options]
