--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ injector = "^0.20.1"
 requests = "^2.28.1"
 grpcio-tools = "^1.48.1"
 protobuf = "4.21.9"
+httpx = "^0.23.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
