--- a/Dockerfile.rest
+++ b/Dockerfile.rest
@@ -1,7 +1,7 @@
 ARG PIP_VERSION=22.2.2
-ARG POETRY_VERSION=1.2.1
+ARG POETRY_VERSION=1.3.2
 
-FROM python:3.11.0-slim-bullseye as builder
+FROM python:3.11.2-slim-bullseye as builder
 ARG PIP_VERSION
 ARG POETRY_VERSION
 WORKDIR /usr/src/app/
@@ -11,7 +11,7 @@ RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} \
     && poetry export --without-hashes -f requirements.txt -o requirements.txt
 
 
-FROM python:3.11.0-slim-bullseye
+FROM python:3.11.2-slim-bullseye
 ARG PIP_VERSION
 ARG POETRY_VERSION
 ENV USERNAME=python
@@ -21,10 +21,10 @@ COPY --from=builder /usr/src/app/requirements.txt ./
 RUN apt-get update \
     # NOTE: uncomment below if you execute apt-get to install something
     && apt-get install --no-install-recommends -y \
-    libgssapi-krb5-2=1.18.3-6+deb11u3 \
-    libk5crypto3=1.18.3-6+deb11u3 \
-    libkrb5-3=1.18.3-6+deb11u3 \
-    libkrb5support0=1.18.3-6+deb11u3 \
+    libgnutls30=3.7.1-5+deb11u3 \
+    libssl1.1=1.1.1n-0+deb11u4 \
+    libtasn1-6=4.16.0-2+deb11u1 \
+    openssl=1.1.1n-0+deb11u4 \
     # NOTE: https://packages.debian.org/search
     && pip install --no-cache-dir --upgrade pip==${PIP_VERSION} \
     && pip install --no-cache-dir -r requirements.txt \
@@ -34,7 +34,7 @@ RUN apt-get update \
     /bin/su \
     /usr/bin/chage \
     /usr/bin/chfn \
-    /usr/bin/chsh \ 
+    /usr/bin/chsh \
     /usr/bin/expiry \
     /usr/bin/gpasswd \
     /usr/bin/newgrp \
