--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,54 +1,55 @@
-[tool.poetry]
-name = "msa-backend-todo"
+[project]
+name = "ddd-clean-archtecture-python"
 version = "0.1.0"
 description = ""
-authors = ["koei-kaji <koei.kaji@gmail.com>"]
-
-[tool.poetry.dependencies]
-python = ">=3.11,<3.12"
-uvicorn = {extras = ["standard"], version = "^0.21.0"}
-gunicorn = "^20.1.0"
-fastapi = "^0.95.0"
-pydantic = "^1.9.1"
-injector = "^0.20.1"
-requests = "^2.28.1"
-grpcio-tools = "^1.48.1"
-protobuf = "4.22.1"
-httpx = "^0.23.1"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "*"
-mypy = "*"
-isort = "*"
-black = "*"
-pytest-cov = "*"
-pylint = "*"
-coverage-badge = "*"
-mypy-protobuf = "^3.2.0"
-protoletariat = "^2.0.0"
+authors = [
+    { name = "koei-kaji", email = "koei.kaji@gmail.com" }
+]
+dependencies = [
+    "fastapi>=0.103.1",
+    "uvicorn[standard]>=0.23.2",
+    "gunicorn>=21.2.0",
+    "pydantic>=2.3.0",
+    "injector>=0.21.0",
+    "requests>=2.31.0",
+    "grpcio-tools>=1.58.0",
+    "protobuf>=4.24.3",
+    "httpx>=0.25.0",
+    "pydantic-settings>=2.0.3",
+]
+readme = "README.md"
+requires-python = ">= 3.11"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "pytest>=7.4.2",
+    "mypy>=1.5.1",
+    "isort>=5.12.0",
+    "black>=23.9.1",
+    "pytest-cov>=4.1.0",
+    "pylint>=2.17.5",
+    "coverage-badge>=1.1.0",
+    "mypy-protobuf>=3.5.0",
+    "protoletariat>=3.2.19",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 # NOTE: Black compatible configurations
-# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
+# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
 [tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-line_length = 88
+profile = "black"
 
-# NOTE: Black compatible configurations
-# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
 [tool.pylint.messages_control]
 disable = ["C0330", "C0326"]
 extension-pkg-whitelist = "pydantic"
 
-# NOTE: Black compatible configurations
-# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
 [tool.pylint.format]
 max-line-length = 88
 ignored-modules= ["_grpc"]
